fix slider not working on firefox

--- a/fm10-interactive-pricing-component-main/styles/main.scss
+++ b/fm10-interactive-pricing-component-main/styles/main.scss
@@ -6,14 +6,14 @@
 
 
 body {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     background-color: $neutral-Very-Pale-Blue;
     box-sizing: border-box;
     background-image: url(../images/bg-pattern.svg);
     background-position: top left;
     background-repeat: no-repeat;
-    background-size: auto 50vh;
+    background-size: 100% 50%;
 }
 
 main {
@@ -115,10 +115,8 @@ main {
         outline: none; 
         border-radius: .5rem;
     }
-      
-    &__slider::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        appearance: none;
+
+    @mixin slider-button {
         width: 4rem;
         height: 4rem;
         border: 0;
@@ -130,11 +128,24 @@ main {
         box-shadow: 0px 15px 30px rgba(0, 255, 231, 0.6);
         cursor: pointer;
         transition: all .5s ease;
+    }
+      
+    input[type=range]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+       @include slider-button;
       }
+      
+      input[type=range]::-moz-range-thumb {
+        @include slider-button;
+    }
 
-      &__slider::-webkit-slider-thumb:hover {
+    input[type=range]::-webkit-slider-thumb:hover {
         background-color: #24AEA1;
       }
+      input[type=range]::-moz-range-thumb:hover {
+        background-color: #24AEA1;
+       }
 
       &__price-information {
           padding: 4rem 6.5rem 4.2rem 0rem;
@@ -249,10 +260,10 @@ main {
    @include classic-text;
   }
 
-@media only screen and (min-width: 1585px) {
-    body {
-        background-size: 100vw 50vh;
-    }
+// @media only screen and (min-width: 1585px) {
+//     body {
+//         background-size: 100% 50%;
+//     }
 
     
 }
